# acquila_zmq

./: .gitignore  CONTRIBUTING.md  GITHUB_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  USAGE.md  acquila_zmq.py  example_motor.py  git_status_output.txt  monitor_zmq.py  pyproject.toml  requirements.txt  run_script_example.py  run_server.py  script_runner_gui.py  server_gui.py  setup.py  test_installation.py
acquila_zmq/: __init__.py
examples/: example_motor.py  run_script_example.py  run_server.py
